unpackaged/main/default/objects/Account/recordTypes/TestRecordType.recordType-meta.xml
<RecordType>
    <fullName>TestRecordType</fullName>
    <active>true</active>
    <label>TestRecordType</label>
</RecordType>