unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Hotel_Email_ID__c</columns>
    <columns>Number_of_Rooms__c</columns>
    <columns>Number_of_Staffs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Hotels</label>
</ListView>